tests/rpm-pkgs/autogen-5.18.16-9.fc35/output-exp@valgrind/scan-results.err
Error: COMPILER_WARNING:
autogen-5.18.16/agen5/ag.c:27: included_from: Included from here.
autogen-5.18.16/agen5/expState.c: scope_hint: In function 'find_entry_value'
autogen-5.18.16/agen5/expState.c:166:17: warning[-Wstringop-overflow=]: writing 1 byte into a region of size 0
#  166 |     pzField[-1] = name_sep_ch;
autogen-5.18.16/agen5/expState.c:102:23: note: destination object of size [0, 9223372036854775807] allocated by 'ag_scm2zchars'
#  102 |         char * name = ag_scm2zchars(obj, "find name");
#      |                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
#  164|        *  Search the members for what we want.
#  165|        */
#  166|->     pzField[-1] = name_sep_ch;
#  167|       {
#  168|           SCM field   = scm_from_latin1_string(pzField);
